EDSC-3416: Fixing issue with button spacing

--- a/static/src/js/components/CollectionResults/CollectionResultsItem.scss
+++ b/static/src/js/components/CollectionResults/CollectionResultsItem.scss
@@ -24,6 +24,7 @@
 
   &__body-primary {
     display: flex;
+    margin-bottom: 0.25rem;
   }
 
   &__attribution {
